Se agrega documentación a index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 ‹
+<!--Documento hecho el 3 de noviembre de 2020 por Manuel Uzueta Gil
+basado en curso de Git-->
 3/3/13 Ry's Git Tutorial | The Basics | RyPress
 rypress.com/tutorials/git/the-basics.html 2/12
 <html lang="en">
